# Noob-Trying

./: EDA考核汇报.pptx  README.md  技术报告模板.docx
EDA_Assess-main/database/: database.cpp  database.h
EDA_Assess-main/exporter/: exporter.cpp  exporter.h
EDA_Assess-main/parser/: parser.cpp
EDA_Assess-main/placement/: placement.cpp
version1/: CMakeLists.txt  main.cpp
version1/benchmarks/: CMakeCache.txt  Makefile  case0.txt  case1.txt  cmake_install.cmake  out.txt  task
version1/database/: database.cpp  database.h
version1/exporter/: exporter.cpp
version1/parser/: parser.cpp
version1/placement/: placement.cpp  placement.h
version2/benchmarks/: case1.txt  out.txt
version2/database/: database.h
version2/parser/: parser.h
